# Orbit

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_PLAN.md  README.md  SCREENER_REDESIGN.md  claude.md  docker-compose.yml  index.html  llms.txt  package-lock.json  package.json  skills-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
backend/: README.md  cache.py  config.py  constants.py  deps.py  exceptions.py  ibkr_dumper.py  ibkr_scanner_params.json  main.py  mcp_server.py  parallax-backend.spec  parallax.db-journal  pyproject.toml  rate_control.py  request_cancellation.py  request_logging.py  run.py  state.py
backend/constants/: __init__.py  ibkr_filters.py  ibkr_history.py  ibkr_pacing.py  inflect.py  scan_locations.py  scan_types.py
backend/docs/: gateway-lifecycle.md  ibkr_market_data_fields.md
backend/models/: __init__.py  broker_session.py  execution_plan.py  inflect.py  tws_execution_assistant.py  tws_order_capabilities.py
backend/routers/: agent.py  ai.py  auth.py  drawings.py  execution_assistant.py  fibonacci.py  gateway.py  health.py  indicators.py  inflect.py  instruments.py  market.py  moonmarket.py  options.py  orbit_session.py  orders.py  pulse_config.py  screener.py  sectors.py  settings.py  trading_safety.py  triggers.py  watchlist.py  watchlist_config.py  ws.py
backend/scripts/: evaluate_ai_prompt.py  summarize_request_log.py
backend/services/: ai.py  ai_analysis_preparation.py  ai_cloud_adapters.py  ai_keystore.py  ai_prompt_eval.py  ai_providers.py  ai_settings.py  ai_signal_validation.py  ai_usage.py  broker_session.py  db.py  (+23 more)
(+646 files in other folders)
