[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "ibind>=0.1.22",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.42.0",
]
