[project]
name = "parallax-backend"
version = "0.1.0"
description = "Parallax trading analysis tool — Python sidecar backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "aiolimiter>=1.2.1",
    "pydantic>=2.10.0",
    "polars>=1.20.0",
    "pandas>=2.2.0",
    "pandas-ta>=0.4.71b0",
]
